--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "Game Book in JavaScript",
   "main": "server.js",
   "dependencies": {
+    "babel-preset-react": "^6.3.13",
     "connect": "^3.4.0",
-    "serve-static": "^1.10.0"
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "serve-static": "^1.10.0",
+    "webpack": "^1.12.11"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-preset-react": "^6.3.13",
+    "webpack": "^1.12.11"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
