--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "Game Book in JavaScript",
   "main": "server.js",
   "dependencies": {
-    "babel-preset-react": "^6.3.13",
     "connect": "^3.4.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "serve-static": "^1.10.0",
-    "webpack": "^1.12.11"
+    "serve-static": "^1.10.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.3.13",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "webpack": "^1.12.11"
   },
   "scripts": {
